# kolo-test

./: .gitignore  pyproject.toml  requirements.txt
jff/: apps.py  forms.py  models.py  urls.py  views.py
jff/migrations/: 0001_initial.py
jff/templates/jff/: form.html  index.html  list.html
proj/: __init__.py  patches.py  settings.py  urls.py
